--- a/src/styles/_stars.scss
+++ b/src/styles/_stars.scss
@@ -14,12 +14,9 @@
     }
   }
 
-  &--0 .stars__star:nth-child(-n + 0),
-  &--1 .stars__star:nth-child(-n + 1),
-  &--2 .stars__star:nth-child(-n + 2),
-  &--3 .stars__star:nth-child(-n + 3),
-  &--4 .stars__star:nth-child(-n + 4),
-  &--5 .stars__star:nth-child(-n + 5) {
-    background-image: url('../images/star-active.svg');
+  @for $i from 0 through 5 {
+    &--#{$i} .stars__star:nth-child(-n + #{$i}) {
+      background-image: url('../images/star-active.svg');
+    }
   }
 }
