--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $text-light-secondary: #616070;
 $border-color: #f3f3f3;
 
 // Fonts
-$font-family-main: 'Roboto', sans-serif;
+$font-family-main: 'Roboto';
 
 // Card
 $card-border-radius: 5px;
